<resources>
    <string name="app_name">Films DB</string>
    <string name="button_details">Детали</string>
    <string name="star_wars_ep_8_descr" translatable="false">Star wars EP 8</string>
    <string name="star_wars_ep_7_descr" translatable="false">Star wars EP 7</string>
    <string name="star_wars_ep_5_descr" translatable="false">Star wars EP 5</string>

    <string name="ep_1_header" translatable="false">Звездные войны I</string>
    <string name="ep_5_header" translatable="false">Звездные войны V</string>
    <string name="ep_3_header" translatable="false">Звездные войны III</string>
    <string name="ep_2_header" translatable="false">Звездные войны II</string>
    <string name="ep_7_header" translatable="false">Звездные войны VII</string>
    <string name="ep_8_header" translatable="false">Звездные войны VIII</string>

    <string name="ep_5_description" translatable="false">«Звёздные войны: Эпизод V: Империя наносит ответный удар» (англ. Star Wars: Episode V - The Empire Strikes Back[1][2]) — эпический приключенческий фильм 1980 года режиссёра Ирвина Кершнера в жанре космическая опера, снятый по сценарию Ли Брэкетт, Лоуренса Кэздана и Джорджа Лукаса[3]. Продолжение фильма «Звёздные войны. Эпизод IV: Новая надежда» и четвёртая полнометражная картина, выпущенная компанией Lucasfilm. После трудностей, связанных с производством фильма, он был выпущен 21 мая 1980 года и первоначально получил неоднозначные отзывы критиков.</string>
    <string name="ep_1_description" translatable="false">«эпический приключенческий фильм в жанре космическая опера, снятый Джорджем Лукасом. Это четвёртый фильм, выпущенный в рамках киносаги «Звёздные войны», выступающий первой частью трилогии-приквела и первым фильмом в саге с хронологической точки зрения. Кроме того, это четвёртая полнометражная картина Лукаса, выпущенная им после 22-летнего перерыва в режиссуре, со времён работы над своим предыдущим фильмом «Звёздные войны. </string>
    <string name="ep_2_description" translatable="false">«Эпический приключенческий фильм 2002 года в жанре космическая опера, снятый режиссёром Джорджем Лукасом по сценарию, написанному самим Лукасом в соавторстве с Джонатаном Хейлсом. Пятый фильм в режиссёрской карьере Лукаса. Он является пятым фильмом из девяти, выпущенных в рамках серии «Звёздные войны»,</string>
    <string name="ep_3_description" translatable="false">«Эпический приключенческий фильм 2005 года в жанре космическая опера с элементами мелодрамы, снятый режиссёром и сценаристом Джорджем Лукасом, его шестой полнометражный фильм. Это шестой снятый фильм в саге «Звёздные войны» и третий в фабуле серии. Это двадцатая полнометражная картина компании Lucasfilm.</string>
    <string name="ep_7_description" translatable="false">Приключенческий фильм в жанре космическая опера, производства Lucasfilm и Bad Robot Productions, снятый Дж. Дж. Абрамсом по сценарию, написанному в соавторстве с Лоуренсом Кэзданом и Майклом Арндтом. Седьмой эпизод[ком. 2] саги «Звёздные войны»[6][7]. Является хронологическим продолжением фильма «Звёздные войны. Эпизод VI: Возвращение джедая», а также началом трилогии-сиквела.</string>
    <string name="ep_8_description" translatable="false">Приключенческий фильм в жанре космической оперы, режиссёром и автором сценария которого выступил Райан Джонсон. Восьмой эпизод саги «Звёздные войны». Это продолжение внутренней хронологии серии и является сиквелом предыдущих фильмов, а также вторым в третьей трилогии.</string>
    <string name="button_invite">Пригласить</string>
    <string name="invite_message" translatable="false">Посмотри какое крутое приложение я нашел!</string>
    <string name="film_liked">Нравится</string>
    <string name="dialog_header">Внимание!</string>
    <string name="dialog_button_yes">Да</string>
    <string name="dialog_button_no">Нет</string>
    <string name="description_exit_conf" translatable="false">Вы уверены что хотите выйти из приложения?</string>
    <string name="friend_invite_button_description" translatable="false">Friend invite button</string>
    <string name="button_night_mode" translatable="false">Night mode</string>
    <string name="film_comment">Комментарий</string>
    <string name="menu_item_favorites">Избранные фильмы</string>
    <string name="remove_from_favorite">Remove from favorite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_films">Фильмы</string>
    <string name="drawer_favorite">Избранные</string>
</resources>
