<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginTop="@dimen/margin_16dp"
            android:contentDescription="@string/star_wars_ep_5_descr"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/episode_8" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginTop="@dimen/margin_16dp"
            android:contentDescription="@string/star_wars_ep_7_descr"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/episode_7" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:contentDescription="@string/star_wars_ep_8_descr"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/episode_5" />

        <TextView
            android:id="@+id/ep_5_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/ep_5_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/ep_7_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ep_7_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ep_5_header"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/ep_8_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ep_8_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ep_5_header"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <Button
            android:id="@+id/ep_5_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/button_details"
            app:layout_constraintStart_toStartOf="@+id/ep_5_header"
            app:layout_constraintTop_toBottomOf="@+id/ep_5_header" />

        <Button
            android:id="@+id/ep_7_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/button_details"
            app:layout_constraintStart_toStartOf="@+id/ep_7_header"
            app:layout_constraintTop_toBottomOf="@+id/ep_7_header" />

        <Button
            android:id="@+id/ep_8_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/button_details"
            app:layout_constraintStart_toStartOf="@+id/ep_8_header"
            app:layout_constraintTop_toBottomOf="@+id/ep_8_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
